<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register.LoginUser">

    <TextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rich Hotel"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp" />

    <TextView
        android:id="@+id/bannerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:text="Your Dreams Hotel"
        android:textSize="18sp"
        android:textStyle="italic" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/email"
        android:layout_width="295dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:hint="Email"
        android:textSize="16sp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="Password"
        android:fontFamily="sans-serif-black"
        android:textSize="16sp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginUser"
        android:layout_width="295dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="61dp"
        android:fontFamily="sans-serif-black"
        android:text="LOGIN"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/registerHere"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register Here"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="16sp"
        android:textColor="@color/choco"/>

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Have a nice day"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="16sp"
        android:textColor="@color/choco"/>


</LinearLayout>